This is the C SDK for EdgeX. Its API is based largely on the Go SDK.

Changes for 2.0.0 "Ireland":

- The "Writable" section in configuration is used for properties which may be updated dynamically.
- Support for logging to file and/or the support-logging service has been removed.

Changes for 1.3.1:

- The device service's AdminState can be used to disable/re-enable a running service.

Changes for 1.3.0 "Hanoi":

- 'minimum' and 'maximum' ValueProperties are effective.
- PUT commands on api/v2/device can read CBOR payloads as an alternative to JSON
- 'mask' valueproperty is passed as part of the command request. Drivers should
  atomically perform a read-modify-write operation if this is nonzero. (See README.v2.md)
- v2 API update: Callback added to inform the driver of a configuration update.
- v2 API update: Implementations to supply default values for their configuration.
  - This allows use of numerics/boolean types as well as Strings.
- Event transmission is serialized and operates from a queue with configurable
  maximum length.

Changes for 1.2.2:

- Add ServerBindAddr configuration option for restricting the REST listener
  to a single address.

Changes for 1.2.1:

- Fixes in the compatibility layer for the v1 API.

Changes for 1.2.0 "Geneva":

- --instance flag introduced for suffixing the device service name.
- Environment variable names for config over-rides are all-uppercase.
- Device lastConnected property is managed (configurable and disabled by default)
- Implementations may change the operational state of a device.
- Commandline and environment options aligned with Go microservices.
- Arrays of primitive types supported in Readings.
- Device Readings are populated with datatype information.
- Full dynamic discovery implementation with Provision Watchers.
- New SDK API: see README.v2.md for details.
  - the v1 API will be removed in version 2.0.0
- Utility functions added in edgex-base.h for finding Protocol Properties, and