@@ -1,3 +1,13 @@
+[Writable]
+  LogLevel = 'DEBUG'
+  [Device]
+    DataTransform = true
+    MaxCmdOps = 128
+    MaxCmdResultLen = 256
+    [Device.Discovery]
+      Enabled = true
+      Interval = 10
+
 [Service]
   Port = 49999
   Timeout = 5000
@@ -14,17 +24,6 @@
   [Clients.Metadata]
     Host = 'localhost'
     Port = 48081
-
-[Device]
-  DataTransform = true
-  MaxCmdOps = 128
-  MaxCmdResultLen = 256
-  [Device.Discovery]
-    Enabled = true
-    Interval = 10
-
-[Logging]
-  LogLevel = 'DEBUG'
 
 [Driver]
   TestParam1 = 'Hello'
